external-orders/force-app/main/default/objects/Account/fields/Account_Number_and_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_and_Name__c</fullName>
    <description>For reporting purposes</description>
    <formula>AccountNumber &amp; &quot; - &quot; &amp; Name</formula>
    <inlineHelpText>For reporting purposes</inlineHelpText>
    <label>Account Number and Name</label>
    <type>Text</type>
</CustomField>