external-orders/force-app/main/default/objects/Account/fields/B2B_Days_Since_Login__c.field-meta.xml
<CustomField>
    <fullName>B2B_Days_Since_Login__c</fullName>
    <formula>IF(isblank(B2B_Last_Login__c), 999, today() -  B2B_Last_Login__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B Days Since Login</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>