external-orders/force-app/main/default/objects/Account/fields/B2B_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>B2B_Last_Login__c</fullName>
    <label>B2B Last Login</label>
    <type>Date</type>
</CustomField>