external-orders/force-app/main/default/objects/Account/fields/Credit_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rep_Name__c</fullName>
    <label>Credit Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>