external-orders/force-app/main/default/objects/Account/fields/Eligible_for_B2B_Use__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_B2B_Use__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Include in adoption metrics</description>
    <inlineHelpText>If checked then included in B2B adoption metrics</inlineHelpText>
    <label>B2B: Eligible for Onboarding</label>
    <type>Checkbox</type>
</CustomField>