external-orders/force-app/main/default/objects/Account/fields/Ever_Logged_Into_B2B__c.field-meta.xml
<CustomField>
    <fullName>Ever_Logged_Into_B2B__c</fullName>
    <description>If last login date is not blank and days since last login does not equal 999 then the dealer has, at some point in the near or distant past, logged in.</description>
    <formula>AND(
    NOT( ISBLANK( B2B_Last_Login__c )),
    ( B2B_Days_Since_Login__c &lt;&gt; 999 )
)</formula>
    <label>B2B: Ever logged in?</label>
    <type>Checkbox</type>
</CustomField>